--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/fabiotindin/template-node-ts#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/cors": "^2.8.12",
+    "@types/uuid": "^8.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
